fix(content): #2677 Pocket card overlaps with history card
+ some minor CSS improvements

--- a/content-src/components/PocketStories/PocketStories.scss
+++ b/content-src/components/PocketStories/PocketStories.scss
@@ -18,9 +18,10 @@
       opacity: 0.5;
       font-family: Helvetica, Arial, sans-serif;
       text-transform: lowercase;
-      margin-left: 16px;
       font-weight: 200;
       font-size: 15px;
+      line-height: 18px;
+      vertical-align: top;
       color: $section-title-color;
     }
 
@@ -81,6 +82,7 @@
   .pocket-read-more {
     font-size: 13px;
     color: $topic-grey;
+    min-width: 800px;
 
     ul {
       display: inline;
@@ -120,8 +122,9 @@
     background-position-y: 2px;
   }
 
-  ul.spotlight-list {
-    height: 320px;
+  li.spotlight-item {
+    // Overridden to bring the pocket topics closer to the tiles
+    margin-bottom: 16px;
   }
 
   .hc-label {
